--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.datasource.password=123
 mybatis.mapper-locations=classpath:mapper/**/*-mapper.xml
 mybatis.config-location=classpath:/mybatis-config.xml
 
-
+logging.level.com.example.demo.mapper=TRACE
